--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "dev": "node -r dotenv/config server",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "deploy": "npm dev && npx prisma generate && npx prisma db push && npm ci && npm run build && npm run start:prod"
+    "deploy": "npx prisma generate && npx prisma db push && npm ci && npm run build && npm run start:prod"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
